# gnuplotutils

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  ProjectHome.md  README.md  TODO  bootstrap  configure.in  deploy.enc  gp2eps  gp2eps.html  gp2eps.incl  gp2eps.md  gp2eps.t2t  gplot  gplot.html  gplot.incl  gplot.md  gplot.t2t  index.html  tricktex  tricktex.html
contrib/: to_wiki.sh
doc/: Makefile  Makefile.am  config.t2t  gp2eps.t2t  gplot.t2t  to_wiki.sh
examples/: Makefile.am  demo.sh
extras/: demo.sh  to_wiki.sh
